--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - ./adnc/consul/server1/data:/consul/data
       - ./adnc/consul/server1/config:/consul/config
-    privileged: true
+    # privileged: true
     command: >
       agent -server -bootstrap-expect=3 -ui -node=consul_server_1 -client='0.0.0.0' -bind='172.25.0.1' -data-dir /consul/data -config-dir /consul/config -datacenter=adnc_dc
 
@@ -36,7 +36,7 @@ services:
     volumes:
       - ./adnc/consul/server2/data:/consul/data
       - ./adnc/consul/server2/config:/consul/config
-    privileged: true
+    # privileged: true
     depends_on:
       - consul_server_1
     command: >
@@ -57,7 +57,7 @@ services:
     volumes:
       - ./adnc/consul/server3/data:/consul/data
       - ./adnc/consul/server3/config:/consul/config
-    privileged: true
+    # privileged: true
     depends_on:
       - consul_server_1
     command: >
